# db_memo_to_self

./: README.md  mongo_brew.md  mongo_usage.md  mysql_brew.md  mysql_usage.md  path_windows.md  psql_asdf.md
mongodb/mydb/: users.bson  users.metadata.json
mysql_cmd/: create_tb.sql
mysql_elixir/: .gitignore  README.md  mix.exs
mysql_elixir/lib/: mysql_elixir.ex
mysql_elixir/test/: mysql_elixir_test.exs
mysql_node/: README.md  app.js
mysql_php/: README.md  index.php  read.php
mysql_python/: README.md  app.py  pyproject.toml
mysql_sqlalchemy/: .gitignore  README.md  app.py  pyproject.toml  setting.py
mysql_sqlalchemy/tests/: test_mysql_sqlalchemy.py
psql_cmd/: create_tb.sql
