[tool.poetry]
name = "mysql_python"
version = "0.1.0"
description = "Usage MySQL with Python."
authors = ["im <hogehogehogehoge@hoge.hoge>"]

[tool.poetry.dependencies]
python = "^3.7"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
