[tool.poetry]
name = "mysql_sqlalchemy"
version = "0.1.0"
description = ""
authors = ["im <poson_hemp@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
